[package]
name = "voxel-mesher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["top-left-uv", "right-hand-y-up", "ccw-winding"]
top-left-uv = []
bottom-left-uv = []
right-hand-y-up = []
left-hand-y-up = []
cw-winding = []
ccw-winding = []
